--- a/client/src/components/css/navbar.css
+++ b/client/src/components/css/navbar.css
@@ -44,6 +44,10 @@
   transform: translateY(-50%);
 }
 
+#logo {
+  height: 65%;
+}
+
 #hamburger {
   left: 50%;
   transform: translate(-50%, -50%);
